--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 }
 
 #title{
-    background-image: url(../../images/R.png);
+    background-image: url(images/R.png);
     background-repeat: no-repeat;
     background-size: 1500px 200px;
     
@@ -72,7 +72,7 @@ h4{
 /* sponsors */
 
 #sponsors{
-    background-image: url(../../images/R.png);
+    background-image: url(images/R.png);
     background-repeat: no-repeat;
     background-size: 1500px 500px;
     padding-top: 3%;
@@ -97,7 +97,7 @@ h4{
 
 /* footer */
 #footer{
-    background-image: url(../../images/R.png);
+    background-image: url(images/R.png);
     background-repeat: no-repeat;
     background-size: 1500px 500px;
     padding: 3.5% 15%;
